mobile responsive update

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 </ul>
                 <button>Let's Talk</button>
             </div>
+            <div class="bar">
+                <img src="./bars-solid.svg" alt="">
+            </div>
         </nav>
         <div class="brand">
             <img src="./pexels-fauxels-3183197.jpg" alt="">
